Add option to reject duplicates
Fixes #545.
