# internal/api/gen/http/openapi.json
@@ -170,6 +170,7 @@
         "path": "abc123",
         "pipeline": "abc123",
         "processing_config": "abc123",
+        "reject_duplicates": false,
         "retention_period": "abc123"
       },
       "properties": {
@@ -188,6 +189,11 @@
         "processing_config": {
           "example": "abc123",
           "type": "string"
+        },
+        "reject_duplicates": {
+          "default": false,
+          "example": false,
+          "type": "boolean"
         },
         "retention_period": {
           "example": "abc123",
